дополнение стилей, доработки по api, функция для кнопки "загрузить еще"

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <!-- Продукты  -->
                     </div>
                 </div>
-                
+                <button id="load-more-button" onclick="loadMoreProducts()">Загрузить еще</button>
             </div>
         </div>
     </main>
