добавлена функция для сортировки/применение фильтров

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <label>
                         <input type="checkbox" name="discount" value="true"> Только товары со скидками
                     </label>
-                    
+                    <button type="button" onclick="applyFilters()">Применить</button>
                 </form>
             </div>
             <div class="catalog">
@@ -65,6 +65,9 @@
             </div>
         </div>
     </main>
+    <footer>
+        <p>Позвонить нам <a href="tel:+70000000000">+7 000 000-00-00</a></p>
+    </footer>
     <script src="xxx/scripts.js"></script>
 </body>
 </html>
