создание html для странички корзины

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Интернет-магазин</title>
-    <link rel="stylesheet" href="xxx/styles.css">
+    <link rel="stylesheet" href="qqq/styles.css">
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
             <button type="button">Найти</button>
         </div>
         <div class="icons">
-            <a href="xxx/cart.html">Корзина</a>
+            <a href="qqq/cart.html">Корзина</a>
             <a href="#">Личный кабинет</a>
         </div>
     </header>
@@ -68,6 +68,6 @@
     <footer>
         <p>Позвонить нам <a href="tel:+70000000000">+7 000 000-00-00</a></p>
     </footer>
-    <script src="xxx/scripts.js"></script>
+    <script src="qqq/scripts.js"></script>
 </body>
 </html>
