добавление функции для добавления продуктов в корзину. добавление стилей для страницы корзина.

--- a/qqq/cart.html
+++ b/qqq/cart.html
@@ -24,8 +24,9 @@
                 <!-- Товары  -->
             </div>
         </div>
+        <h2>Оформление заказа</h2>
         <div class="order-form-container">
-            <h2>Оформление заказа</h2>
+            <!-- <h2>Оформление заказа</h2> -->
             <form id="order-form">
                 <div class="form-column">
                     <label for="full_name">Имя:</label>
