--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
         </div>
     </main>
-    <footer>
+    <footer class="footer">
         <p>Позвонить нам <a href="tel:+70000000000">+7 000 000-00-00</a></p>
     </footer>
     <script src="qqq/scripts.js"></script>
