--- a/qqq/cart.html
+++ b/qqq/cart.html
@@ -75,9 +75,9 @@
             </form>
         </div>
     </main>
-    <!-- <footer>
+    <footer class="footer">
         <p>Позвонить нам <a href="tel:+70000000000">+7 000 000-00-00</a></p>
-    </footer> -->
+    </footer>
     <script src="cart-scripts.js"></script>
 </body>
 </html>
