внесение правок в файлы

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="icons">
             <a href="qqq/cart.html">Корзина</a>
-            <a href="#">Личный кабинет</a>
+            <a href="qqq/orders.html">Личный кабинет</a>
         </div>
     </header>
     <div class="notifications" id="notifications">
