--- a/qqq/cart.html
+++ b/qqq/cart.html
@@ -11,7 +11,7 @@
         <div class="logo">Все для Комфорта</div>
         <div class="icons">
             <a href="../index.html">Каталог</a>
-            <a href="#">Личный кабинет</a>
+            <a href="orders.html">Личный кабинет</a>
         </div>
     </header>
     <div class="notifications" id="notifications">
