добавление функций для подсчета доставки

--- a/qqq/cart.html
+++ b/qqq/cart.html
@@ -67,6 +67,10 @@
                     <label for="total-amount">Итоговая стоимость:</label>
                     <input type="text" id="total-amount" name="total-amount" readonly>
 
+                    <label for="delivery-cost-label">Стоимость доставки:</label>
+                    <span id="delivery-cost-label">0 руб.</span>
+
+
                     <div class="form-buttons">
                         <button type="reset">Сбросить</button>
                         <button type="submit">Оформить</button>
